# l8e_harbor

./: .gitignore  CONFIGURATION.md  DEVELOPMENT.md  LICENSE  OBSERVABILITY.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
app/: __init__.py  cli.py  main.py
app/adapters/: __init__.py  auth.py  routes.py  secrets.py
app/adapters/impl/: __init__.py  k8s_auth.py  k8s_secrets.py  localfs_secrets.py  memory_routes.py  simple_auth.py  (+1 more)
app/api/: __init__.py
app/core/: config.py  dependencies.py  proxy.py
app/models/: schemas.py
app/observability/: __init__.py  logging.py  metrics.py  tracing.py
deployments/: README.md
deployments/docker/: Dockerfile  README.md  admin-init.dockerfile  admin-init.sh  docker-compose.full.yml  docker-compose.yaml  prometheus.yml
deployments/helm/: Chart.yaml  values.yaml
deployments/kubernetes/: admin-setup-job.yaml
deployments/scripts/: test-admin-setup.sh  validate-deployment.sh
deployments/systemd/: install.sh  l8e-harbor.service
deployments/vm/: install.sh
examples/: README.md  config.yaml  mcp-route.yaml  routes-backup.yaml
examples/calculator-mcp/: Dockerfile  README.md  calculator_mcp.py  docker-compose.yml  harbor-config.yaml  prometheus.yml
ouath-test/: README.md  app.py
tests/: __init__.py  test_api.py  test_auth.py  test_cli.py  test_integration.py  test_proxy.py  test_routes.py  test_storage.py
ui/: .env.production  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
(+34 files in other folders)
